logs/Slang/generic/class/class_test_44.sv.log
name: class_test_44
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:7:1: error: language feature not yet supported
class macros_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:8:2: error: unknown macro or compiler directive '`uvm_field_utils_begin'
 `uvm_field_utils_begin(my_class)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:9:4: error: unknown macro or compiler directive '`uvm_field_int'
   `uvm_field_int(blah1, flag1)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:10:4: error: unknown macro or compiler directive '`uvm_field_real'
   `uvm_field_real(blah2, flag2)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:11:4: error: unknown macro or compiler directive '`uvm_field_enum'
   `uvm_field_enum(blah3, flag3)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:12:4: error: unknown macro or compiler directive '`uvm_field_object'
   `uvm_field_object(blah4, flag4)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:13:4: error: unknown macro or compiler directive '`uvm_field_event'
   `uvm_field_event(blah5, flag5)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:14:4: error: unknown macro or compiler directive '`uvm_field_string'
   `uvm_field_string(blah6, flag6)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:15:4: error: unknown macro or compiler directive '`uvm_field_array_int'
   `uvm_field_array_int(blah7, flag7)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:16:4: error: unknown macro or compiler directive '`uvm_field_sarray_int'
   `uvm_field_sarray_int(blah8, flag8)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:17:4: error: unknown macro or compiler directive '`uvm_field_aa_int_string'
   `uvm_field_aa_int_string(blah9, flag9)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_44.sv:18:2: error: unknown macro or compiler directive '`uvm_field_utils_end'
 `uvm_field_utils_end
 ^
